
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef char u8 ;



bool class_num (const u8 c)
{
  return ((c >= '0') && (c <= '9'));
}
